allignment done for dual and single party pdf in one page

--- a/singleHtml/index.html
+++ b/singleHtml/index.html
@@ -45,22 +45,21 @@
 
             <div class="allign-content">
                 <p>$courseMessage</p>
-                <br>
+
                 <h2><strong>$recipientName</strong></h2>
-                <br>
+
                 <p>$courseDescription</p>
                 <h2><strong>$courseDate</strong></h2>
             </div>
 
-            <div class="qrImage">
+            <div>
                 <img
                     src="./images/qrcode.png"
-
                     width="70"
-                    class="sb-certificatePage-logo"
+                    class="sb-certificatePage-logo qrImage"
                 />
             </div>
-                <div class="sigImage">
+            <div class="sigImage">
                 <img
                     src="./images/stackrouteSig.png"
                     height="60"
@@ -72,19 +71,18 @@
                 <p>Sr. VP, StackRoute</p>
 
                 <img
-                        src="./images/stack-route.png"
-                        height="120"
-                        width="200"
-                        class="allign-footer"
-                    />
+                    src="./images/stack-route.png"
+                    height="100"
+                    width="200"
+                    class="allign-footer"
+                />
             </div>
-        <div class="sb-certificate-footer">
+            <div class="sb-certificate-footer">
                 <a
                     href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1">http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a>
 
             </div>
         </div>
-
 
     </div>
 
