removed alt text of gov of gujrat and added logo text

--- a/dualHtml/index.html
+++ b/dualHtml/index.html
@@ -30,7 +30,7 @@
                     <img
                         src="./images/dualLogo.png"
                         class="dualLogo"
-                        alt="Government of Gujarat"
+                        alt="Logo"
                     >
                 </div>
 
