--- a/singleHtml/index.html
+++ b/singleHtml/index.html
@@ -29,7 +29,7 @@
                     <img
                         src="./images/singleLogo.png"
                         class="singleLogo"
-                        alt="Government of Gujarat"
+                        alt="Logo"
                     >
                 </div>
 
