added dynamic variable for logo and signature

--- a/dualHtml/index.html
+++ b/dualHtml/index.html
@@ -30,7 +30,7 @@
                     <img
                         src="./images/dualLogo.png"
                         class="dualLogo"
-                        alt="Logo"
+                        alt="headerLogo"
                     >
                 </div>
 
@@ -48,7 +48,8 @@
             <div>
                 <img
                     class="qrImage"
-                    src="./images/qrcode.png"
+                    src=`./images/$qrcode`
+                    alt="qrcode"
                 >
             </div>
             <div class="signature-allign">
@@ -59,9 +60,10 @@
                         (Canada)
                     </p>
                     <img
-                        src="./images/niit-logo.png"
+                        src=`./images/$logo1`
                         height="100"
                         width="200"
+                        alt="logo1"
                     />
 
                 </div>
@@ -70,9 +72,10 @@
                         <strong>Edgar Aranha</strong><br>Vice President, Human Resources
                     </p>
                     <img
-                        src="./images/cgi.png"
+                        src=`./images/$logo2`
                         height="100"
                         width="200"
+                        alt="logo2"
                     />
 
                     <!--            <hr class="sign-line"/>-->
