--- a/singleHtml/index.html
+++ b/singleHtml/index.html
@@ -29,7 +29,7 @@
                     <img
                         src="./images/singleLogo.png"
                         class="singleLogo"
-                        alt="Logo"
+                        alt="headerLogo"
                     >
                 </div>
 
@@ -54,27 +54,30 @@
 
             <div>
                 <img
-                    src="./images/qrcode.png"
+                    src=`./images/$qrcode`
                     width="70"
                     class="sb-certificatePage-logo qrImage"
+                    alt="qrcode"
                 />
             </div>
             <div class="sigImage">
                 <img
-                    src="./images/stackrouteSig.png"
+                    src=`./images/$signature`
                     height="60"
                     width="100"
                     class="sb-certificatePage-logo"
+                    alt="signature"
                 />
                 <!--            <hr class="sign-line"/>-->
                 <p><strong>Ramanujan Thirumalai</strong></p>
                 <p>Sr. VP, StackRoute</p>
 
                 <img
-                    src="./images/stack-route.png"
+                    src=`./images/$logo`
                     height="100"
                     width="200"
                     class="allign-footer"
+                    alt="logo"
                 />
             </div>
             <div class="sb-certificate-footer">
