--- a/dualHtml/index.html
+++ b/dualHtml/index.html
@@ -76,6 +76,7 @@
                         height="100"
                         width="200"
                         alt="logo2"
+                        class="logoallign"
                     />
 
                     <!--            <hr class="sign-line"/>-->
