--- a/singleHtml/index.html
+++ b/singleHtml/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,16 +12,12 @@
         href="css/style.css"
         rel="stylesheet"
     >
-
+</head>
 <body>
-    <!-- Certificate of completion-->
+
 
     <div class="sb-certificate-table-ct">
-        <!-- <img
-            src="./images/white_bg.jpg"
-            class="certificate-frame"
-        /> -->
-        <!--<img src="./images/certificate-frame-blue.svg" class="certificate-frame"/>-->
+
 
         <div class="sb-certificate-container">
             <div class="sb-certificate-header">
@@ -34,14 +30,7 @@
                 </div>
 
             </div>
-            <!-- <div class="certificate-details">
-                This is to certify that <br><br>
-                <strong>$recipientName</strong>
-                has sucessfully completed the Java tech stack<br>
-                covering UI-Angular-Java Spring-Microservices from <br>
-                StackRoute on 23-September-2020.
 
-            </div> -->
 
             <div class="allign-content">
                 <p>$courseMessage</p>
@@ -66,7 +55,7 @@
                     width="100"
                     class="sb-certificatePage-logo"
                 />
-                <!--            <hr class="sign-line"/>-->
+
                 <p><strong>Ramanujan Thirumalai</strong></p>
                 <p>Sr. VP, StackRoute</p>
 
@@ -89,4 +78,77 @@
     </div>
 </body>
 
-</html>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <title>Certificate</title>
+  <link
+    href="css/style.css"
+    rel="stylesheet"
+  >
+</head>
+
+<body>
+
+  <div class="flex-container">
+    <div class="certificate-main">
+
+      <div class="emptydiv"></div>
+      <div class="badge-title">
+        <div class="badge-title-flex-container">
+
+          <div class="logo">
+            <img src="./images/logos-all-01.png">
+          </div>
+
+          <div class="title">
+            <img src="./images/title.png">
+          </div>
+
+        </div>
+      </div>
+      <div class="qrcodetopcolumn">
+        <div class="qrcodeImageTop">
+          <img src="./images/qrcode.png">
+        </div>
+      </div>
+
+    </div>
+    <div class="narrative">
+      <img src="./images/sr_bg_3.png" />
+      <!-- <p>
+        {{narrative}}
+      </p> -->
+
+    </div>
+
+    <div class="sign-logo-wrapper">
+      <div class="qrcodeImage">
+        <img src="./images/qrcode.png">
+      </div>
+      <div class="stacksignlogo">
+        <div class="sign">
+          <img src="./images/sign-dir.png">
+        </div>
+        <div class="company-logo-stack">
+          <img src="images/Stack-route.png">
+        </div>
+      </div>
+
+    </div>
+    <div class="verify-link">
+      Verify from here: <a
+        href="http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1">http://localhost:5000/verify?url=http://localhost:8000/public/assertions/pB4CgdvlQaaZ120VQXrbpg.json?v=1_1</a>
+    </div>
+
+  </div>
+
+</body>
