changes done for footer in dual-party

--- a/dualHtml/index.html
+++ b/dualHtml/index.html
@@ -191,7 +191,7 @@
             </div>
         </section>
 
-        <section style="display: flex; flex-direction: row; justify-content:space-between;">
+        <section style="display: flex; flex-direction: row; justify-content:space-between;align-items: center;width:80%; margin:auto;">
             <div class="company-logo-stack">
                 <img
                     src="./images/niitlogo.png"
