added dual and fixed cert

--- a/single/single.html
+++ b/single/single.html
@@ -71,7 +71,7 @@
       <img src="./assets/images/single/sr_bg_3.png" width="680" height="255" alt="" />
       <span style="position: absolute; font-size: 26px; top: 16px">
         <p>This is to certify</p>
-        <section >
+        <section style="line-height: 0.2">
           <strong>John Doe</strong> has successfully completed the Java tech stack
           <p>covering UI-Angular-Java Spring-Microservices from</p>
           <p>StackRoute on <strong>23-September-2020.</strong></p>
